test/libsolidity/syntaxTests/more_than_256_syntaxerrors.sol
contract C {
  function f() {
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
    continue;
  }
}
// ----
// SyntaxError: (34-42): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (48-56): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (62-70): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (76-84): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (90-98): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (104-112): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (118-126): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (132-140): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (146-154): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (160-168): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (174-182): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (188-196): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (202-210): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (216-224): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (230-238): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (244-252): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (258-266): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (272-280): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (286-294): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (300-308): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (314-322): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (328-336): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (342-350): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (356-364): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (370-378): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (384-392): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (398-406): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (412-420): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (426-434): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (440-448): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (454-462): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (468-476): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (482-490): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (496-504): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (510-518): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (524-532): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (538-546): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (552-560): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (566-574): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (580-588): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (594-602): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (608-616): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (622-630): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (636-644): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (650-658): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (664-672): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (678-686): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (692-700): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (706-714): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (720-728): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (734-742): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (748-756): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (762-770): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (776-784): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (790-798): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (804-812): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (818-826): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (832-840): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (846-854): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (860-868): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (874-882): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (888-896): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (902-910): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (916-924): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (930-938): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (944-952): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (958-966): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (972-980): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (986-994): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1000-1008): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1014-1022): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1028-1036): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1042-1050): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1056-1064): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1070-1078): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1084-1092): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1098-1106): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1112-1120): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1126-1134): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1140-1148): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1154-1162): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1168-1176): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1182-1190): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1196-1204): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1210-1218): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1224-1232): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1238-1246): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1252-1260): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1266-1274): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1280-1288): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1294-1302): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1308-1316): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1322-1330): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1336-1344): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1350-1358): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1364-1372): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1378-1386): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1392-1400): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1406-1414): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1420-1428): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1434-1442): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1448-1456): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1462-1470): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1476-1484): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1490-1498): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1504-1512): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1518-1526): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1532-1540): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1546-1554): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1560-1568): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1574-1582): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1588-1596): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1602-1610): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1616-1624): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1630-1638): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1644-1652): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1658-1666): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1672-1680): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1686-1694): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1700-1708): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1714-1722): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1728-1736): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1742-1750): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1756-1764): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1770-1778): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1784-1792): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1798-1806): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1812-1820): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1826-1834): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1840-1848): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1854-1862): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1868-1876): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1882-1890): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1896-1904): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1910-1918): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1924-1932): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1938-1946): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1952-1960): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1966-1974): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1980-1988): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (1994-2002): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2008-2016): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2022-2030): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2036-2044): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2050-2058): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2064-2072): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2078-2086): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2092-2100): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2106-2114): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2120-2128): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2134-2142): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2148-2156): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2162-2170): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2176-2184): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2190-2198): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2204-2212): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2218-2226): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2232-2240): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2246-2254): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2260-2268): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2274-2282): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2288-2296): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2302-2310): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2316-2324): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2330-2338): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2344-2352): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2358-2366): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2372-2380): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2386-2394): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2400-2408): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2414-2422): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2428-2436): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2442-2450): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2456-2464): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2470-2478): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2484-2492): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2498-2506): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2512-2520): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2526-2534): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2540-2548): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2554-2562): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2568-2576): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2582-2590): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2596-2604): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2610-2618): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2624-2632): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2638-2646): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2652-2660): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2666-2674): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2680-2688): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2694-2702): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2708-2716): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2722-2730): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2736-2744): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2750-2758): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2764-2772): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2778-2786): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2792-2800): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2806-2814): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2820-2828): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2834-2842): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2848-2856): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2862-2870): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2876-2884): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2890-2898): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2904-2912): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2918-2926): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2932-2940): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2946-2954): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2960-2968): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2974-2982): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (2988-2996): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3002-3010): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3016-3024): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3030-3038): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3044-3052): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3058-3066): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3072-3080): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3086-3094): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3100-3108): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3114-3122): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3128-3136): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3142-3150): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3156-3164): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3170-3178): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3184-3192): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3198-3206): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3212-3220): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3226-3234): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3240-3248): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3254-3262): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3268-3276): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3282-3290): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3296-3304): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3310-3318): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3324-3332): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3338-3346): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3352-3360): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3366-3374): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3380-3388): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3394-3402): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3408-3416): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3422-3430): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3436-3444): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3450-3458): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3464-3472): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3478-3486): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3492-3500): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3506-3514): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3520-3528): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3534-3542): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3548-3556): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3562-3570): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3576-3584): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3590-3598): "continue" has to be in a "for" or "while" loop.
// SyntaxError: (3604-3612): "continue" has to be in a "for" or "while" loop.
// Warning: There are more than 256 errors. Aborting.
